--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "index.js",
+    "build": "webpack build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,15 @@
   "homepage": "https://github.com/mkmorgan1/social_links_tree#readme",
   "dependencies": {
     "express": "^4.17.3",
-    "pm2": "^5.2.0"
+    "pm2": "^5.2.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.4",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   }
 }
