--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "index.js",
+    "start": "node index.js",
     "build": "webpack build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/mkmorgan1/social_links_tree#readme",
   "dependencies": {
+    "@babel/preset-react": "^7.16.7",
     "express": "^4.17.3",
     "pm2": "^5.2.0",
     "react": "^18.0.0",
