--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A website that directs you to all your social media profiles",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
+    "dev": "nodemon scripts.js",
+    "start": "node scripts.js",
     "build": "webpack build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +24,8 @@
     "express": "^4.17.3",
     "pm2": "^5.2.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "shelljs": "^0.8.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
